--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
+/* brandig color */
 :root{
-    --main-color: #FF7517;
-    --secondary-color: #464547;
-    --secondary-color2: #575657;
+    --main-color: #FF7515;
+    --secondary-color: #464549;
+    --secondary-color2: #CCCCCC;
   }
