style tool display box

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* brandig color */
 :root{
-    --main-color: #FF7515;
+    --primary-color: #FF7515;
     --secondary-color: #464549;
     --secondary-color2: #CCCCCC;
   }
