--- a/src/components/ToolDisplay.css
+++ b/src/components/ToolDisplay.css
@@ -8,19 +8,25 @@
 /* tool box display */
 .tool-display-card{
     border: 1px solid var(--secondary-color2);
-    margin: 10px;
+    margin: 10px 10px 30px 10px;
     padding: 10px;
     min-height: 10rem;
     box-shadow: 0 4px 8px 0 var(--secondary-color2);
 
 }
-    
 
+/* tool select wrapper */
+.tool-select-container{
+    margin: 10px;
+}
 
 /* for mobile */
 @media screen and (max-width: 480px) {
     .tool-display-card{
-        margin: 0px;
+        margin: 0px 0px 20px 0px;
         min-height: 10rem;
+    }
+    .tool-select-container{
+        margin: 0px;
     }
 }
